--- a/package.json
+++ b/package.json
@@ -18,7 +18,9 @@
     "react-tap-event-plugin": "^2.0.1",
     "redux": "^3.6.0",
     "redux-logger": "^2.8.1",
-    "redux-thunk": "^2.2.0"
+    "redux-thunk": "^2.2.0",
+     "moment": "^2.17.1",
+    "moment-timezone": "^0.5.11"
   },
   "scripts": {
     "start": "react-scripts start",
